--- a/public/home.html
+++ b/public/home.html
@@ -152,7 +152,7 @@
           <h4>Custom Tags</h4>
           <div v-show="!customtagsedit"><span v-for="ctag in doc.question.custom_tags" class="ctag">{{ ctag }}</span> </div>
           <div class="form-group">
-            <input v-model="customtags" type="string" class="form-control" id="custom_tags" placeholder="Enter tags separated by comma (e.g., cloudant, envoy, etc)?" v-show="customtagsedit">
+            <input v-model="doc.question.custom_tags" type="string" class="form-control" id="custom_tags" placeholder="Enter tags separated by a comma (e.g., cloudant, envoy, etc)?" v-show="customtagsedit">
           </div>
           <button class="btn btn-primary" v-on:click="editcustomtags(doc._id)">{{ customtagsedit ? 'Save' : 'Edit' }}</button>  
           <hr>
