--- a/public/home.html
+++ b/public/home.html
@@ -328,13 +328,14 @@
           <div class="col-sm-9">
             <input v-model="profile.so_id" type="string" class="form-control" id="soid">
           </div>
-          <p class="help-block col-sm-9 col-sm-offset-3">We need to know your Stack Overflow identity. Navigate to the Activity Tab in your Stack Overflow profile and enter that URL here so we can tell whether you have answered a question.
+          <p class="help-block col-sm-9 col-sm-offset-3">We need to 
+            your Stack Overflow identity. Navigate to the Activity Tab in your Stack Overflow profile and enter that URL here so we can tell whether you have answered a question.
           </p>
           <label for="soid" class="col-sm-3 control-label">Slack Organization</label>
           <div class="col-sm-9">
             <input v-model="profile.so_id" type="string" class="form-control" id="soid">
           </div>
-          <p class="help-block col-sm-9 col-sm-offset-3">Tell us know which Slack organization you belong to. For example: "ibm-cloudplatform"
+          <p class="help-block col-sm-9 col-sm-offset-3">Let us know which Slack organization you belong to. For example: "ibm-cloudplatform"
           </p>
         </div>
         <button v-on:click="saveProfile" class="btn btn-default">Submit</button>
